--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,123 @@
-.logo {
+:root {
+  /**definindo variaveis para as cores - melhor reutilização de código*/
+  --vermelha:#e50914;
+  --preta:#141414;
+  --cinza:#aaa;
+  --branca:#fff;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--preta);
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--branca);
+}
+
+.container {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header .logo {
+  margin-left: 5px;
+  color: var(--vermelha);
   font-family: 'Metal Mania', cursive;
+  font-size: 40px;
+}
+
+header nav a {
+  text-decoration: none;
+  color: var(--cinza);
+  margin-right: 10px;
+}
+
+header nav a:hover {
+  color: var(--branca);
+}
+
+.show-principal {
+  margin-top: 20px;
+  height:400px;
+  display: flex;
+  /*sempre segue o flex-direction para justificar */
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.show-principal .container {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+
+.show-principal .titulo {
+  margin-top: 15%;
+  font-size: 25px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.show-principal .descricao {
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
+.botoes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.show-principal .botao {
+  background-color: rgba(0,0,0,.50);
+  width: 240px;
+  height: 60px;
+  border: none;
+  color: var(--branca);
+  padding: 15px 30px;
+  margin-right: 15px;
+  margin-top: 10px;
+  font-size: 12px;
+  transition: .3s ease all;
+}
+
+.botao:hover {
+  background-color: var(--branca);
+  color: var(--preta);
+}
+
+.botao i {
+  margin-right: 8px;
+}
+
+.show {
+  width: 60%;
+  height: 100%;
+  align-items: center;
+  justify-items: center;
 }
 
 iframe {
-  width:70%;
   height: 100%;
+  width: 100%;
 }
+
+.owl-box {
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+
