--- a/style/style.css
+++ b/style/style.css
@@ -33,13 +33,14 @@ header .logo {
   margin-left: 5px;
   color: var(--vermelha);
   font-family: 'Metal Mania', cursive;
-  font-size: 40px;
+  font-size: 50px;
 }
 
 header nav a {
   text-decoration: none;
   color: var(--cinza);
   margin-right: 10px;
+  font-size: 14px;
 }
 
 header nav a:hover {
@@ -115,9 +116,20 @@ iframe {
   width: 100%;
 }
 
-.owl-box {
+.carrossel-metal {
+  margin-top: 5px;
+  height: 500px;
+}
+
+.owl-carousel owl-theme owl-loaded owl-drag {
+  height: 100%;
+}
+
+.item-video {
   height: 100%;
   width: 100%;
   display: block;
 }
+
+
 
