estilização dos carrosseis

--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
   --vermelha:#e50914;
   --preta:#141414;
   --cinza:#aaa;
-  --branca:#fff;
+  --branca:rgba(216, 207, 207, 0.98);
 }
 
 *{
@@ -44,7 +44,7 @@ header nav a {
 }
 
 header nav a:hover {
-  color: var(--branca);
+  color: var(--vermelha);
 }
 
 .show-principal {
@@ -84,8 +84,8 @@ header nav a:hover {
 
 .show-principal .botao {
   background-color: rgba(0,0,0,.50);
-  width: 240px;
-  height: 60px;
+  max-width: 240px;
+  max-height: 60px;
   border: none;
   color: var(--branca);
   padding: 15px 30px;
@@ -96,7 +96,7 @@ header nav a:hover {
 }
 
 .botao:hover {
-  background-color: var(--branca);
+  background-color: var(--vermelha);
   color: var(--preta);
 }
 
@@ -121,12 +121,14 @@ iframe {
   height: 500px;
 }
 
-.owl-carousel owl-theme owl-loaded owl-drag {
-  height: 100%;
+.carrossel-metal h3 {
+  margin: 10px 5px;
+  font-size: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.item-video {
-  height: 100%;
+.item {
+  height: 70%;
   width: 100%;
   display: block;
 }
