--- a/style/style.css
+++ b/style/style.css
@@ -133,5 +133,21 @@ iframe {
   display: block;
 }
 
+@media screen and (max-width: 700px) {
+  header .container {
+    display: flex;
+    flex-direction: column;
+  }
 
+  .botao {
+    margin-top: 5px;
+    max-height: 80px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .descricao {
+    width: 50%;
+  }
+}
 
